--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,21 +3,21 @@
 	margin: 0 auto;
   display: grid;
   grid-template-areas:
-    "header header header"
-    "nav content content";
+    "h h h"
+    "n c c";
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
   grid-gap: 10px;
 }
 
 .header {
-	grid-area: "header";
+	grid-area: h;
 }
 
 .nav {
-	grid-area: "nav";
+	grid-area: n;
 }
 
 .content {
-	grid-area: "content";
+	grid-area: c;
 }
