--- a/src/components/nav/nav.module.css
+++ b/src/components/nav/nav.module.css
@@ -1,21 +1,22 @@
 .nav { 
 	background-color: rgb(145, 145, 145);
+	min-height: 100%;
 }
 
-.nav-list {
+.navList {
 	list-style: none;
 	text-decoration: none;
 	padding-left: 20px;
 }
 
-.nav-link {
+.navLink {
 	text-decoration: none;
 	color: black;
 	font-weight: normal;
 	transition: all .3s ease;
 }
 
-.nav-link:hover {
+.navLink:hover {
 	color: rgb(175, 164, 164);
 
 }
